link for icon in headers

--- a/views/forgotPassword.handlebars
+++ b/views/forgotPassword.handlebars
@@ -4,7 +4,15 @@
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem">
           <div class="card-body p-5 text-center">
-            <div id="form" class="mt-md-4 pb-5">
+            <button id="pwBtn" class="btn btn-outline-light btn-lg px-5">
+              Forgot Password?
+            </button>
+            <br />
+            <br />
+            <button id="unBtn" class="btn btn-outline-light btn-lg px-5">
+              Forgot Username?
+            </button>
+            <div id="passwordForm" class="mt-md-4 pb-5" style="display:none;">
               <h2 class="fw-bold mb-2 text-uppercase">Forgot Password</h2>
               <p class="text-white-50 mb-5">
                 Please enter the email address attached to your merchant account
@@ -13,23 +21,52 @@
               <div class="form-outline form-white mb-4">
                 <input
                   type="text"
-                  id="email"
+                  id="email1"
                   class="form-control form-control-lg"
                 />
-                <label class="form-label" for="email">Email</label>
+                <label class="form-label" for="email1">Email</label>
               </div>
 
               <button
-                id="submitBtn"
+                id="pwSubmitBtn"
                 class="btn btn-outline-light btn-lg px-5"
                 type="submit"
               >
                 Reset Password
               </button>
             </div>
+            <div id="usernameForm" class="mt-md-4 pb-5" style="display:none;">
+              <h2 class="fw-bold mb-2 text-uppercase">Forgot Username</h2>
+              <p class="text-white-50 mb-5">
+                Please enter the email address attached to your merchant account
+              </p>
+
+              <div class="form-outline form-white mb-4">
+                <input
+                  type="text"
+                  id="email2"
+                  class="form-control form-control-lg"
+                />
+                <label class="form-label" for="email2">Email</label>
+              </div>
+
+              <button
+                id="unSubmitBtn"
+                class="btn btn-outline-light btn-lg px-5"
+                type="submit"
+              >
+                Recover Username
+              </button>
+            </div>
             <div id="sentMessage" class="mt-md-4 pb-5" style="display:none;">
 
-              <p>A temporary password has been sent to your email</p>
+              <p>A temporary password has been sent to your email.</p>
+              <a href="/login" class="text-white-50 fw-bold">Back to merchant
+                login</a>
+            </div>
+            <div id="UNsentMessage" class="mt-md-4 pb-5" style="display:none;">
+
+              <p>Your username has been sent to your email.</p>
               <a href="/login" class="text-white-50 fw-bold">Back to merchant
                 login</a>
             </div>
