--- a/views/tableMap.handlebars
+++ b/views/tableMap.handlebars
@@ -8,6 +8,7 @@
           <button
             id="{{table.id}}"
             class="button tablesChild"
+            value="{{table.table_name}}"
           >{{table.table_name}}</button>
         {{/each}}
       </div>
