--- a/views/merchantLogin.handlebars
+++ b/views/merchantLogin.handlebars
@@ -1,58 +1,59 @@
 <div id="mLogin-page">
   <section class="gradient-custom mLogin-bg">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem">
-          <div class="card-body p-5 text-center">
-            <div class="mt-md-4 pb-5">
-              <h2 class="fw-bold mb-2 text-uppercase">Merchant Login</h2>
-              <p class="text-white-50 mb-5">
-                Please enter your username and password
-              </p>
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem">
+            <div class="card-body p-5 text-center">
+              <div class="mt-md-4 pb-5">
+                <h2 class="fw-bold mb-2 text-uppercase">Merchant Login</h2>
+                <p class="text-white-50 mb-5">
+                  Please enter your username and password
+                </p>
 
-              <div class="form-outline form-white mb-4">
-                <input
-                  type="text"
-                  id="username"
-                  class="form-control form-control-lg"
-                />
-                <label class="form-label" for="username">Username</label>
+                <div class="form-outline form-white mb-4">
+                  <input
+                    type="text"
+                    id="username"
+                    class="form-control form-control-lg"
+                  />
+                  <label class="form-label" for="username">Username</label>
+                </div>
+
+                <div class="form-outline form-white mb-4">
+                  <input
+                    type="password"
+                    id="password"
+                    class="form-control form-control-lg"
+                  />
+                  <label class="form-label" for="password">Password</label>
+                </div>
+
+                <p class="small mb-5 pb-lg-2">
+                  <a class="text-white-50" href="/forgotPassword">Forgot
+                    username or password?</a>
+                </p>
+
+                <button
+                  id="submitBtn"
+                  class="btn btn-outline-light btn-lg px-5"
+                  type="submit"
+                >
+                  Login
+                </button>
               </div>
 
-              <div class="form-outline form-white mb-4">
-                <input
-                  type="password"
-                  id="password"
-                  class="form-control form-control-lg"
-                />
-                <label class="form-label" for="password">Password</label>
+              <div>
+                <p class="mb-0">
+                  Don't have an account?
+                  <a href="/signup" class="text-white-50 fw-bold">Sign Up</a>
+                </p>
               </div>
-
-              <p class="small mb-5 pb-lg-2">
-                <a class="text-white-50" href="/forgotPassword">Forgot password?</a>
-              </p>
-
-              <button
-                id="submitBtn"
-                class="btn btn-outline-light btn-lg px-5"
-                type="submit"
-              >
-                Login
-              </button>
-            </div>
-
-            <div>
-              <p class="mb-0">
-                Don't have an account?
-                <a href="/signup" class="text-white-50 fw-bold">Sign Up</a>
-              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </section>
 </div>
 <script src="./js/merchantLogin.js">
