--- a/views/merchantSettings.handlebars
+++ b/views/merchantSettings.handlebars
@@ -1,4 +1,5 @@
-<div id="pwCheck">
+{{> header}}
+<div id="pwCheck" style="margin-top:100px;">
   <div class="form-outline form-white mb-4">
     <p>Please enter the password for your merchant account:</p>
     <input
