--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
-                    <div id="menu-items" class="item-1">
+                    {{!-- <div id="menu-items" class="item-1">
                         <img src="" alt="" class="images" />
                         <p></p>
                         <p></p>
@@ -141,7 +141,7 @@
                     <div id="menu-items" class="item-12">
                         <img src="" alt="" class="images" />
                         <p></p>
-                        <p></p>
+                        <p></p> --}}
                     </div>
                 </div>
             </div>
