--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="/public/images/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   
     <script src="https://kit.fontawesome.com/5c22034e45.js" crossorigin="anonymous"></script>
