--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -1,6 +1,6 @@
 {{> header}}
 <div id="receipts-page">
-    <section class="receipts d-flex justify-content-center bg-dark" id="insertReceipts">
+    <section class="receipts d-flex justify-content-center gradient-custom" id="insertReceipts">
 
         {{!-- <!-- template --> --}}
         <div class="card receipt">
@@ -85,7 +85,7 @@
                           <h4><strong>Total:</strong></h4>
                         </td>
                         <td class="text-center text-danger">
-                          <h4><strong id="receiptTotal"></strong></h4>
+                          <h4><strong class="receiptTotal"></strong></h4>
                         </td>
                       </tr>
                     </tbody>
@@ -142,12 +142,78 @@
                           </div>
                         </div>
                       </div>
-                    <button
-                      type="button"
-                      class="btn btn-success btn-lg pay-button"
-                    >
+                    <button type="button" class="btn btn-success btn-lg pay-button" data-bs-toggle="modal" data-bs-target="#payModal">
                       Pay Now
                     </button>
+                      <div class="modal" id="payModal" tabindex="-1" aria-labelledby="payModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="tipModalLabel">Pay Bill</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              
+                              <div class="payBtn-section section">
+                                <div class="payBtn-container container">
+                                  <div class="row payBtn-full-height full-height justify-content-center">
+                                    <div class="col-12 text-center align-self-center">
+                                      <div class="payBtn-section section pb-5 pt-5 pt-sm-2 text-center">
+                                        <h6 class="mb-0 pb-3 payBtn-h6"><span>Cash </span><span>Card</span></h6>
+                                        <input class="payBtn-checkbox checkbox" type="checkbox" id="reg-log" name="reg-log" />
+                                        <label for="reg-log"></label>
+                                        <div class="payBtn-card-3d-wrap card-3d-wrap mx-auto">
+                                          <div class="payBtn-card-3d-wrapper card-3d-wrapper">
+                                            <div class="payBtn-card-front card-front">
+                                              <div class="payBtn-center-wrap center-wrap">
+                                                <div class="payBtn-section section text-center">
+                                                  <h4 class="mb-4 pb-3 payBtn-h4">Total: <span class="receiptTotal"></span></h4>
+                                                  <div class="payBtn-form-group form-group">
+                                                    <input type="text" name="customerCash" class="payBtn-form-style form-style" placeholder="Customer Paid:"
+                                                      id="customerCash" autocomplete="off" onkeyup="updateText(this.value)">
+                                                  </div>
+                                                  <h6 class="mt-4 pt-3 payBtn-h4">Change Due: <span id="changeDue"></span></h6>
+                                                </div>
+                                              </div>
+                                            </div>
+                                            <div class="payBtn-card-back card-back">
+                                              <div class="payBtn-center-wrap center-wrap">
+                                                <div class="payBtn-section section text-center">
+                                                  <h4 class="mb-4 pb-3 payBtn-h4">Total: <span class="receiptTotal"></span></h4>
+                                                  <div class="payBtn-form-group form-group">
+                                                    <input type="text" class="payBtn-form-style form-style"
+                                                      placeholder="Card Number" autocomplete="off">
+                                                  </div>
+                                                  <div class="payBtn-form-group form-group d-flex justify-content-between">
+                                                    <input type="text" class="payBtn-form-style form-style exp-cvv"
+                                                      placeholder="Exp 03/23" autocomplete="off">
+                                                    <input type="text" class="payBtn-form-style form-style exp-cvv"
+                                                      placeholder="CVV" autocomplete="off">
+                                                  </div>
+                                                  <div class="payBtn-form-group form-group">
+                                                    <input type="text" class="payBtn-form-style form-style"
+                                                      placeholder="Cardholder Name" autocomplete="off">
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+
+                            </div>
+                            <div class="modal-footer">
+                              <button id="paySubmit" type="submit" data-bs-dismiss="modal" class="btn btn-primary btn-lg">
+                                Submit
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                   </div>
                 </div>
               </div>
