added styling code to landing page, merchant settings and sign up page, added animation to menu items pictures when on hover, added animation to header logo, fixed homepage buttons and logo sizing

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -9,12 +9,10 @@
                         Table Map
                     </button>
 
-                    <button type="button" class="btn btn-dark tab-name">
-                        {{ticket.bar_tab.tab_name}}
-                    </button>
+                    
                 </div>
 
-                <p class="server-name">Server Name: {{ticket.employee.name}}</p>
+                <p class="server-name">Hello: {{sesh.currentEmployee}}</p>
 
                 <table class="nqp-table">
                     <tr>
@@ -72,7 +70,9 @@
                         </button>
                     </div>
                 </div>
+            </div>
 
+            <div class="scroll">
                 <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
                     {{!-- <div id="menu-items" class="item-1">
                         <img src="" alt="" class="images" />
@@ -147,5 +147,6 @@
             </div>
         </div>
     </div>
+    </div>
     <script src="/js/landingpage.js"></script>
-    </section>
+</section>
