--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,7 +3,7 @@
     <a href="/pos/login"><img
         src="/images/MercuryLogo.png"
         alt="Mercury Logo"
-        class="navbar-brand logo"
+        class="navbar-brand mercury-logo-header"
       /></a>
     {{! need variables. insert server name/ table name here}}
     <div class="d-flex">
