--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -4,7 +4,7 @@
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
           <div class="card card-registration my-4">
-            <div>
+            <div class="background-form"> 
               <h1 class="m-3 text-uppercase text-center">
                 Mercury POS registration form
               </h1>
