--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -81,78 +81,8 @@
                 </div>
             </div>
 
-            <div class="scroll">
-                <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
-                    {{!-- <div id="menu-items" class="item-1">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-2">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-3">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-4">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div class="d-flex justify-content-evenly col-md-12">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-6">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-7">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-8">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div class="d-flex justify-content-evenly col-md-12">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-                    <div id="menu-items" class="item-10">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-                    <div id="menu-items" class="item-11">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                    </div>
-
-                    <div id="menu-items" class="item-12">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p> --}}
-                    </div>
-                </div>
+            <div id="menuDisplay" class="scroll">
+                
             </div>
         </div>
     </div>
