--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -9,15 +9,15 @@
     <!-- SIDEBAR BUTTONS -->
     <div id="sidebar" class="col-4">
       <!-- EDIT EMPLOYEES button -->
-      <div id="editEmployees" type="button" class="btn action-btn btn-light">
+      <div id="editEmployees" type="button" class="btn action-btn btn-light edit-employees">
         Edit Employees
       </div>
       <!-- EDIT MENU button -->
-      <div id="editMenu" type="button" class="btn action-btn btn-light">
+      <div id="editMenu" type="button" class="btn action-btn btn-light edit-menu">
         Edit Menu
       </div>
       <!-- VIEW ORDERS button -->
-      <div id="viewOrders" type="button" class="btn action-btn btn-light">
+      <div id="viewOrders" type="button" class="btn action-btn btn-light view-orders">
         View Orders
       </div>
       <!-- DELETE ORDER button -->
@@ -180,8 +180,6 @@
       </div>
     </div>
   </div>
-  <nav id="footer_nav" class="row">
-    <div class="col">MERCURY POS</div>
-  </nav>
+  
 </section>
 <script src="/js/admin.js"></script>
