completed payment processing

--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -173,7 +173,7 @@
                                                       id="customerCash" autocomplete="off" onkeyup="updateText(this.value)">
                                                   </div>
                                                   <h6 class="mt-4 pt-3 payBtn-h4">Change Due: <span id="changeDue"></span></h6>
-                                                  <h6 class="pt-3 payBtn-h4 errorMessage" id="cashErrorMessage"></h6>
+                                                  <h6 class="pt-3 payBtn-h4 errorMessage" id="cashMessage"></h6>
                                                 </div>
                                               </div>
                                             </div>
@@ -195,7 +195,7 @@
                                                     <input type="text" class="payBtn-form-style form-style"
                                                       placeholder="Cardholder Name" autocomplete="off" id="cardholderName">
                                                   </div>
-                                                  <h6 class="pt-3 payBtn-h4 errorMessage" id="cardErrorMessage"></h6>
+                                                  <h6 class="pt-3 payBtn-h4 errorMessage" id="cardMessage"></h6>
                                                 </div>
                                               </div>
                                             </div>
