--- a/public/css/style.css
+++ b/public/css/style.css
@@ -510,7 +510,9 @@ html {
 .edit-employees:hover,
 .edit-menu:hover,
 .view-orders:hover {
-  background-color: #d9686c;
+  background-color:#e39c7f;
+  border-color: #e39c7f;
+  color: white;
 }
 
 /* END Admin Page CSS */
@@ -706,7 +708,7 @@ header {
 .merch:hover {
   background-color: #d9686c
 }
-
+.item-0,
 .item-1,
 .item-2,
 .item-3,
@@ -777,13 +779,21 @@ header {
 .nqp-table {
   margin-top: 30px;
   width: 90%;
-  margin-left: 35px;
+  margin-left: 25px;
   color: white;
 }
 
+.table-header {
+  margin-bottom: 40px;
+}
+
+.table-row {
+  margin-top: 40px;
+}
 
 .btn-subtract, .btn-add {
   color: white;
+  margin-right: 5px;
 }
 
 .btn-subtract:hover {
@@ -791,12 +801,17 @@ header {
  
 }
 
+.quantity-table{
+  background-color: #000000;
+padding-left: 20px;
+}
+
 .btn-add:hover {
   color: green;
 }
 
 .send-kitchen {
-  margin-top: 9rem;
+  margin-top: 4rem;
   width: 80%;
   height: 80px;
   margin-left: 40px;
@@ -825,6 +840,19 @@ background-color: #e87b72;
   margin-bottom: 10px;
   font-size: 2rem;
 
+}
+.btn-add-menu-item {
+  margin-left: 10px;
+float: right;
+margin-right: 10px;
+padding: 0 10px;
+font-size: 20px;
+
+}
+
+.btn-add-menu-item:hover {
+color: green;
+background-color: #e39c7f;
 }
 
 /* END OF LANDING PAGE CSS */
