menu reload and send to kitchen

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -49,6 +49,9 @@
                         <i class="fa-thin fa-paper-plane-top"></i>
                         Send to Kitchen
                     </button>
+                    <div id="kitchen-message" class="text-success text-center" style="visibility: hidden;">
+                             Order seccessfully sent to kitchen!
+                    </div>
                 </div>
                 <div id="sales-tax">
                     <table class="sales-tax">
