--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,3 +1,19 @@
 {{> header}}
-<h1 style="margin-top:100px;">404</h1>
-<h2>We're sorry, this page does not exist!</h2>
+
+<div class="error-page">
+<h1 style="margin-top:70px;" class="error">404</h1>
+<h2 class="error-text">We're sorry, this page does not exist!</h2>
+
+<div class="gifs">
+
+<img src="https://media.tenor.com/IaHWusTft-sAAAAC/hasbulla.gif" alt="" class="gif-image">
+
+<img src="https://media.tenor.com/-R5bXqsbcJ4AAAAC/honeycardi-hasbulla.gif" alt="" class="gif-image">
+
+</div>
+
+<div class="gifs2">
+<img src="https://media0.giphy.com/media/TqohlojjEttBCcNci6/giphy.gif?cid=6c09b952cc8a4157738717a8f329865e42dd9cc9e1bfe170&rid=giphy.gif&ct=g" alt="" class="gif-image-last">
+
+</div>
+</div>
