--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -15,8 +15,6 @@
                         </button>
                     {{/if}}
                     
-
-                
                 </div>
 
                 <p class="server-name">Hello: {{sesh.currentEmployee}}</p>
@@ -79,7 +77,7 @@
                         <button class="btn btn-lg btn-dark food">Food</button>
                     </div>
                     <div id="merch" class="col-lg-4 right-row-btns">
-                        <button class="btn btn-lg btn-dark merch">
+                    <i class="fa-solid fa-gift-card"></i> <button class="btn btn-lg btn-dark merch">
                             Merch <br />Giftcards
                         </button>
                     </div>
