--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -191,6 +191,7 @@
               Form</div>
           </form>
         </div>
+        
         {{! employee table headers }}
         <table style="width:100%; text-align:start">
           <tr>
@@ -201,7 +202,8 @@
             <th style="width: 25%">E-mail</th>
           </tr>
         </table>
-        <div id="employeeTableWrap"></div>
+<div id="employeeTableWrap">
+        </div>
       </div>
 
       <!-- MENU wrap -->
