work in progress for card payment

--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -87,7 +87,7 @@
                         </button>
                     </div>
                 </div>
-                <div id="menuDisplay" class="scroll">   
+                <div id="menuDisplay" class="">   
                 </div>
             </div>
 
